Fixed the selection hilite
Now, the selected link will be highlighted on the NavBar. However, the highlight only works when the link is explicitly clicked.

--- a/public/style.css
+++ b/public/style.css
@@ -13,12 +13,13 @@ nav
     text-align: center;
 }
 
-.pressed
+.selected
 {
     background-color: darkgray;
 }
 
-.notpressed
+.path
 {
-    background-color: none;
+    height: 36px;
+    width: 100px;
 }
